# scout_robot

./: .gitignore  install.sh  make.sh  setup.sh
src/: scout_robot.repos
src/scout_robot/: package.xml  setup.py
src/scout_robot/launch/: scout_bringup.launch.py
