<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>scout_robot</name>
  <version>0.0.1</version>
  <description>Scout Mini Robot Integration Package</description>
  <maintainer email="user@example.com">User</maintainer>
  <license>Apache-2.0</license>

  <!-- 기본 ROS2 의존성 -->
  <depend>rclpy</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <!-- Scout 관련 -->
  <depend>scout_msgs</depend>
  <depend>scout_base</depend>
  
  <!-- Navigation2 -->
  <exec_depend>ros-humble-navigation2</exec_depend>
  <exec_depend>ros-humble-nav2-bringup</exec_depend>
  
  <!-- Robot Localization (센서 퓨전) -->
  <exec_depend>ros-humble-robot-localization</exec_depend>
  
  <!-- RTAB-Map -->
  <exec_depend>ros-humble-rtabmap</exec_depend>
  <exec_depend>ros-humble-rtabmap-ros</exec_depend>
  
  <!-- RealSense 카메라 -->
  <exec_depend>ros-humble-realsense2-camera</exec_depend>
  <exec_depend>ros-humble-realsense2-description</exec_depend>
  
  <!-- IMU 관련 -->
  <depend>xsens_mti_driver</depend>
  
  <!-- URDF 및 로봇 모델 -->
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
  
  <!-- 시각화 -->
  <exec_depend>ros-humble-rviz2</exec_depend>
  
  <!-- 추가 유틸리티 -->
  <exec_depend>ros-humble-image-transport</exec_depend>
  <exec_depend>ros-humble-compressed-image-transport</exec_depend>
  <exec_depend>ros-humble-depth-image-proc</exec_depend>

  <!-- 빌드 도구 -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- 테스트 -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
